--- a/src/ui/SettingsPanel.form
+++ b/src/ui/SettingsPanel.form
@@ -155,6 +155,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Easy"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="diffEasyMouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="diffMedium">
       <Properties>
@@ -169,6 +172,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Medium"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="diffMediumMouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="diffHard">
       <Properties>
@@ -185,6 +191,9 @@
         <Property name="horizontalAlignment" type="int" value="2"/>
         <Property name="horizontalTextPosition" type="int" value="4"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="diffHardMouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
@@ -258,6 +267,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Car 1"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="car1MouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="car2">
       <Properties>
@@ -269,6 +281,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Car 2"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="car2MouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="car3">
       <Properties>
@@ -280,6 +295,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Car 3"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="car3MouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="car4">
       <Properties>
@@ -291,6 +309,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Car 4"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="car4MouseReleased"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JRadioButton" name="car5">
       <Properties>
@@ -302,6 +323,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Car 5"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseReleased" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="car5MouseReleased"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
